change files for better performance